you dont have to click the thing anymore

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<a href="/TS flying about us.html">TS flying</a>
+<a id="link" href="TS flying.html">TS flying</a>
+<script>document.getElementById("link").click()</script>
