latest website files

--- a/payment1.html
+++ b/payment1.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About us</title>
-        <link rel="stylesheet" href="TS flying about us.css">
+        <title>payment</title>
         <style>
             nav {
                 background-color: #333;
@@ -41,9 +40,7 @@
                 <li><a href="Macs Unlimited.html">Macs Unlimited</a></li>
             </ul>
         </nav>
-        <h1>About us</h1>
-        <p>At TS Flying, we make sure all our customers get full control of what the car looks like and does!</p>
-        <P>we could literally make your car look like this if you wanted</P>
-        <img src="flying car.jpg">
+        <h1>Payment</h1>
+        <button>159,895</button>
     </body>
 </html>
