--- a/ChatGPT3.html
+++ b/ChatGPT3.html
@@ -13,7 +13,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About Us</a></li>
-				<li class="active"><a href="buy.html">Buy</a></li>
+				<li><a href="buy.html">Buy</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
