--- a/TS flying.html
+++ b/TS flying.html
@@ -6,7 +6,46 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
     <body>
-        <a href="TS flying about us.html">
-<button>about us</button></a> <a href="models.html"> <button>models</button></a>
-    </body>
+        
+	
+	<style>
+		nav {
+			background-color: #333;
+			overflow: hidden;
+		}
+
+		nav ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+		}
+
+		nav li {
+			float: left;
+		}
+
+		nav li a {
+			display: block;
+			color: white;
+			text-align: center;
+			padding: 14px 16px;
+			text-decoration: none;
+		}
+
+		nav li a:hover {
+			background-color: #111;
+		}
+	</style>
+</head>
+<body>
+	<nav>
+		<ul>
+			<li><a href="Gotcha Fever.html">Gotcha Fever</a></li>
+			<li><a href="TS flying about us.html">About</a></li>
+			<li><a href="Macs Unlimited.html">Macs Unlimited</a></li>
+		</ul>
+	</nav>
+	<!-- HTML content goes here -->
+</body>
 </html>
