nav bar is better

--- a/Checkout for gotcha fever.html
+++ b/Checkout for gotcha fever.html
@@ -47,5 +47,6 @@
           <option value="30">yes</option>
           <option value="50">no</option>
         </select>
+       <a href="payment1.html"><button>payment</button></a>
     </body>
 </html>
