--- a/Gotcha Fever.html
+++ b/Gotcha Fever.html
@@ -45,7 +45,7 @@
         <p>This model costs $159,895, Gotcha Fever is made specifically 
             so you can go extremely fast, it has a third pedal that activates a jet engine the size of 50
         jet engines combined!</p>
-        <a href="payment1.html"> <button>Buy</button></a>
+        <a href="Checkout for gotcha fever.html"> <button>Buy</button></a>
 
     </body>
 </html>
