--- a/payment1.html
+++ b/payment1.html
@@ -38,6 +38,7 @@
                 <li><a href="Gotcha Fever.html">Gotcha Fever</a></li>
                 <li><a href="TS flying about us.html">About</a></li>
                 <li><a href="Macs Unlimited.html">Macs Unlimited</a></li>
+                <li><a href="TS flying.html">Home</li></a>
             </ul>
         </nav>
         <h1>Payment</h1>
