--- a/Checkout for gotcha fever.html
+++ b/Checkout for gotcha fever.html
@@ -35,10 +35,10 @@
     <body>
         <nav>
             <ul>
-                <li><a href="Gotcha Fever.html">Gotcha Fever</a></li>
-                <li><a href="TS flying about us.html">About</a></li>
-                <li><a href="Macs Unlimited.html">Macs Unlimited</a></li>
-            </ul>
+                <li><a href="TS flying.html">Home</a></li>
+            <li><a href="TS flying about us.html">About</a></li>
+			<li><a href="Gotcha Fever.html">Gotcha Fever</a></li>
+            <li><a href="Macs Unlimited.html">Macs Unlimited</a></li>
         </nav>
 <h1>Checkout</h1>
 <label for="">size 30 or size 50 jet engine:</label>
