--- a/TS flying.html
+++ b/TS flying.html
@@ -48,5 +48,7 @@
 		</ul>
 	</nav>
 	<!-- HTML content goes here -->
+    <img src="good flying car.jpg">
+    <img src="Gotcha fever.jpg"
 </body>
 </html>
