--- a/Gotcha Fever.html
+++ b/Gotcha Fever.html
@@ -35,9 +35,10 @@
     <body>
         <nav>
             <ul>
-                <li><a href="Gotcha Fever.html">Gotcha Fever</a></li>
-                <li><a href="TS flying about us.html">About</a></li>
-                <li><a href="Macs Unlimited.html">Macs Unlimited</a></li>
+                <li><a href="TS flying.html">Home</a></li>
+            <li><a href="TS flying about us.html">About</a></li>
+			<li><a href="Gotcha Fever.html">Gotcha Fever</a></li>
+            <li><a href="Macs Unlimited.html">Macs Unlimited</a></li>
             </ul>
         </nav> 
             <h1>Gotcha Fever</h1>
