--- a/TS flying.html
+++ b/TS flying.html
@@ -48,7 +48,7 @@
 		</ul>
 	</nav>
 	<!-- HTML content goes here -->
-    <img src="good flying car.jpg">
-    <img src="Gotcha fever.jpg"
+    <img src="good flying car.jpg" height="500" width="500">
+    <img src="Gotcha fever.jpg" height="500" width="500">
 </body>
 </html>
