--- a/Checkout for gotcha fever.html
+++ b/Checkout for gotcha fever.html
@@ -44,9 +44,9 @@
 <label for="">size 30 or size 50 jet engine:</label>
 
         <select name="massage" id="massage">
-          <option value="30">yes</option>
-          <option value="50">no</option>
+          <option value="30">30</option>
+          <option value="50">50</option>
         </select>
-       <a href="payment1.html"><button>payment</button></a>
+       <p><a href="payment1.html"><button>payment</button></a></p>
     </body>
 </html>
