--- a/TS flying.html
+++ b/TS flying.html
@@ -49,6 +49,6 @@
 	</nav>
 	<!-- HTML content goes here -->
     <img src="good flying car.jpg" height="500" width="500">
-    <img src="Gotcha fever.jpg" height="500" width="500">
+    <p><img src="Gotcha fever.jpg" height="500" width="500"></p>
 </body>
 </html>
