--- a/TS flying.html
+++ b/TS flying.html
@@ -48,7 +48,7 @@
 		</ul>
 	</nav>
 	<!-- HTML content goes here -->
-    <img src="good flying car.jpg" height="500" width="500">
+    <br><img src="good flying car.jpg" height="500" width="500">
     <p><img src="Gotcha fever.jpg" height="500" width="500"></p>
 </body>
 </html>
